# PPM

./: README.md
report/: report.aux  report.tex  template.aux  template.dvi
src/: Bezier.cpp  Bezier.h  CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.h  NormalSphere.cpp  NormalSphere.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  World.cpp  World.h  main.cpp  utils.cpp  utils.h
texture/: PhotonMapping
